--- a/src/app/insurance/[company-slug]/page.module.css
+++ b/src/app/insurance/[company-slug]/page.module.css
@@ -1,59 +1,87 @@
 .darkBg {
+
   background-color: var(--primary-dark);
-  
-  padding: 4rem 4rem;
+
+  > .contentContainer {
+    padding: 2rem;
+  }
+
 }
 
 .lightBg {
-  background-color: white;
-  color: var(--primary-dark);
-  padding: 4rem 4rem;
+  background-color: var(--bg-light);
+  color: var(--text-dark);
+
+  > :global(.container) {
+    padding: 2rem;
+  }
 }
 
 .fullHeight {
   min-height: 100vh;
-  padding: 6rem 2rem 4rem 2rem;
-}
-
-.verticalCenter {
   display: flex;
   align-items: center;
 }
 
+.fullHeight > :global(.container) {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  align-items: center;
+  padding: 0 2rem;
+}
+
+.fullHeight > :global(.container) > :global(.column-2a) {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  gap: 3rem;
+}
+
+.verticalCenter {
+  width: 100%;
+}
+
 .leftColumn {
-  flex: 1;
-  padding: 6rem 2rem 4rem 2rem;
+  display: flex;
+  flex-direction: column;
+  gap: 1.5rem;
+  width: 50%;
 }
 
 .rightColumn {
-  flex: 1;
-  padding-left: 2rem;
-  padding: 3rem 2rem 4rem 2rem;
-}
-
-.title {
-  font-size: 3.5rem;
-  line-height: 1.2;
-  margin-bottom: 1.5rem;
-  font-weight: 700;
-}
-
-.free {
-  font-weight: 700;
-  color: var(--primary-accent);
+  display: flex;
+  flex-direction: column;
+  width: 50%;
 }
 
 .subtitle {
-  font-size: 1.5rem;
-  margin-bottom: 1rem;
-  color: #ece7e7;
+  font-family: "Work Sans", serif;
+  color: var(--text-light);
+  font-size: 16px;
+  margin: 0;
+  line-height: 1.2;
+  text-transform: uppercase;
+}
+
+.title {
+  font-size: 2.5rem;
+  text-transform: uppercase;
+  color: var(--primary-accent);
+  margin: 0;
+  line-height: 1.1;
+}
+
+.free {
+  color: var(--primary-accent);
 }
 
 .intro {
-  font-size: 1.2rem;
-  line-height: 1.6;
-  margin-bottom: 1rem;
-  color: #ece7e7; 
+  color: var(--text-light);
+  margin: 0;
+  line-height: 1.5;
+  max-width: 700px;
 }
 
 .evaluationText {
@@ -64,14 +92,9 @@
 
 .evaluationTitle {
   font-size: 1.5rem;
-  font-weight: 600;
-  color: white;
-  text-align: center;
-}
-
-.free {
-  font-weight: 700;
-  color: var(--primary-accent);
+  font-weight: bold;
+  margin-bottom: 0.5rem;
+  color: var(--text-light);
 }
 
 .contentContainer {
@@ -118,7 +141,7 @@
 }
 
 .lightBg .issue {
-  background-color: #f8f9fa;
+  background-color: #efefef;
 }
 
 .help {
